// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Default 1`] = `
<View
  testID="fake-button"
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#00B0FF",
        "borderRadius": 32,
        "borderWidth": 0,
        "flexDirection": "row",
        "height": 54,
        "justifyContent": "center",
        "marginBottom": 0,
        "opacity": 1,
        "paddingHorizontal": 24,
      }
    }
    testID="fake-button-native"
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontSize": 17,
            "fontWeight": "700",
            "textAlign": "center",
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
        ]
      }
    >
      Here we go!
    </Text>
  </View>
</View>
`;

exports[`Storyshots Button Disabled 1`] = `
<View
  testID="fake-button-disabled"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 44,
          "justifyContent": "center",
          "marginBottom": 10,
        },
        Array [
          Object {
            "borderRadius": 32,
            "borderWidth": 0,
            "flexDirection": "row",
            "height": 54,
            "marginBottom": 0,
            "paddingHorizontal": 24,
          },
          Object {
            "backgroundColor": "#00B0FF",
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
        ],
        Object {
          "backgroundColor": "#ECEFF1",
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontSize": 17,
            "fontWeight": "700",
            "textAlign": "center",
          },
          undefined,
          Object {
            "color": "#90A4AE",
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
        ]
      }
    >
      Here we go!
    </Text>
  </View>
</View>
`;

exports[`Storyshots Button Inverted 1`] = `
<View
  testID="fake-button"
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 32,
        "borderWidth": 0,
        "flexDirection": "row",
        "height": 54,
        "justifyContent": "center",
        "marginBottom": 0,
        "opacity": 1,
        "paddingHorizontal": 24,
      }
    }
    testID="fake-button-native"
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontSize": 17,
            "fontWeight": "700",
            "textAlign": "center",
          },
          Object {
            "color": "#546E7A",
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
        ]
      }
    >
      Here we go!
    </Text>
  </View>
</View>
`;

exports[`Storyshots Button Loading 1`] = `
<View
  testID="fake-button-loading"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 44,
          "justifyContent": "center",
          "marginBottom": 10,
        },
        Array [
          Object {
            "borderRadius": 32,
            "borderWidth": 0,
            "flexDirection": "row",
            "height": 54,
            "marginBottom": 0,
            "paddingHorizontal": 24,
          },
          Object {
            "backgroundColor": "#00B0FF",
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
        ],
        Object {
          "backgroundColor": "#ECEFF1",
        },
      ]
    }
  >
    <ActivityIndicator
      animating={true}
      color="#90A4AE"
      hidesWhenStopped={true}
      size="small"
      style={
        Object {
          "alignSelf": "center",
        }
      }
    />
  </View>
</View>
`;

exports[`Storyshots Button Placeholder 1`] = `
<View
  testID="fake-button"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 44,
          "justifyContent": "center",
          "marginBottom": 10,
        },
        Array [
          Object {
            "borderRadius": 32,
            "borderWidth": 0,
            "flexDirection": "row",
            "height": 54,
            "marginBottom": 0,
            "paddingHorizontal": 24,
          },
          Object {
            "backgroundColor": "#00B0FF",
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
        ],
        Object {
          "backgroundColor": "#ECEFF1",
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontSize": 17,
            "fontWeight": "700",
            "textAlign": "center",
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Object {
            "color": "#ECEFF1",
          },
        ]
      }
    >
      Here we go!
    </Text>
  </View>
</View>
`;

exports[`Storyshots Button Placeholder with custom color 1`] = `
<View
  testID="fake-button"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 44,
          "justifyContent": "center",
          "marginBottom": 10,
        },
        Array [
          Object {
            "borderRadius": 32,
            "borderWidth": 0,
            "flexDirection": "row",
            "height": 54,
            "marginBottom": 0,
            "paddingHorizontal": 24,
          },
          Object {
            "backgroundColor": "#00B0FF",
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
        ],
        Object {
          "backgroundColor": "red",
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontSize": 17,
            "fontWeight": "700",
            "textAlign": "center",
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Object {
            "color": "red",
          },
        ]
      }
    >
      Here we go!
    </Text>
  </View>
</View>
`;

exports[`Storyshots Button Secondary 1`] = `
<View
  testID="fake-button"
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "transparent",
        "borderColor": "#00B0FF",
        "borderRadius": 32,
        "borderWidth": 2,
        "flexDirection": "row",
        "height": 54,
        "justifyContent": "center",
        "marginBottom": 0,
        "opacity": 1,
        "paddingHorizontal": 24,
      }
    }
    testID="fake-button-native"
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontSize": 17,
            "fontWeight": "700",
            "textAlign": "center",
          },
          undefined,
          undefined,
          undefined,
          undefined,
          Object {
            "color": "#00B0FF",
          },
          undefined,
          undefined,
        ]
      }
    >
      Here we go!
    </Text>
  </View>
</View>
`;

exports[`Storyshots Button Secondary Inverted 1`] = `
<View
  testID="fake-button"
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "transparent",
        "borderColor": "#00B0FF",
        "borderRadius": 32,
        "borderWidth": 2,
        "flexDirection": "row",
        "height": 54,
        "justifyContent": "center",
        "marginBottom": 0,
        "opacity": 1,
        "paddingHorizontal": 24,
      }
    }
    testID="fake-button-native"
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontSize": 17,
            "fontWeight": "700",
            "textAlign": "center",
          },
          Object {
            "color": "#546E7A",
          },
          undefined,
          undefined,
          undefined,
          Object {
            "color": "#00B0FF",
          },
          undefined,
          undefined,
        ]
      }
    >
      Here we go!
    </Text>
  </View>
</View>
`;

exports[`Storyshots Button Small 1`] = `
<View
  testID="fake-button"
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#00B0FF",
        "borderRadius": 32,
        "borderWidth": 0,
        "flexDirection": "row",
        "height": 45,
        "justifyContent": "center",
        "marginBottom": 0,
        "opacity": 1,
        "paddingHorizontal": 24,
      }
    }
    testID="fake-button-native"
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontSize": 17,
            "fontWeight": "700",
            "textAlign": "center",
          },
          undefined,
          undefined,
          undefined,
          Object {
            "fontSize": 15,
          },
          undefined,
          undefined,
          undefined,
        ]
      }
    >
      Here we go!
    </Text>
  </View>
</View>
`;

exports[`Storyshots Button TextSecondary 1`] = `
<View
  testID="fake-button"
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#00B0FF",
        "borderRadius": 32,
        "borderWidth": 0,
        "flexDirection": "row",
        "height": 54,
        "justifyContent": "center",
        "marginBottom": 0,
        "opacity": 1,
        "paddingHorizontal": 24,
      }
    }
    testID="fake-button-native"
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontSize": 17,
            "fontWeight": "700",
            "textAlign": "center",
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Object {
            "color": "#00B0FF",
          },
          undefined,
        ]
      }
    >
      Here we go!
    </Text>
  </View>
</View>
`;
